--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ body {
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
   background-color: var(--accent-color);
-  border: 0 solid var(--accent-color);
+  border: 1px solid transparent;
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
@@ -431,13 +431,13 @@ body {
   border-radius: 4px;
 
   transition: color var(--transition-duration) var(--transition-timing-function),
-    border var(--transition-duration) var(--transition-timing-function);
+    border-color var(--transition-duration) var(--transition-timing-function);
 }
 
 .clients-list-link:hover,
 .clients-list-link:focus {
   color: var(--accent-color);
-  border: 1px solid var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .clients-list-icon {
@@ -467,7 +467,7 @@ body {
   line-height: 1.63;
   color: inherit;
   background-color: #f5f4fa;
-  border: 0 solid transparent;
+  border: 1px solid transparent;
   border-radius: 4px;
   cursor: pointer;
 
@@ -643,6 +643,7 @@ body {
   left: 50%;
   width: 528px;
   height: 580px;
+  padding: 40px;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -680,4 +681,165 @@ body {
 .modal-close-icon {
   fill: currentColor;
 }
-/* ============= END OF MODAL WINDOW ============= */
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-head {
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+}
+
+.modal-form-field {
+  margin-bottom: 10px;
+
+  font-size: 12px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--secondary-text-color);
+}
+
+.modal-form-field.last-field {
+  margin-bottom: 20px;
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+  margin-top: 4px;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 46px;
+
+  transition: border-color var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-input:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  fill: var(--primary-text-color);
+
+  transform: translateY(-50%);
+  transition: fill var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-comment {
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  margin-top: 4px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+
+  transition: border-color var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-comment::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-comment:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
+.checkbox-icon-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  vertical-align: middle;
+  margin-right: 7px;
+
+  border: 2px solid var(--primary-text-color);
+  border-radius: 4px;
+  transition: border-color var(--transition-duration) var(--transition-timing-function);
+}
+
+.checkbox-icon {
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  display: block;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-checkbox:focus + .modal-form-checkbox-policy .checkbox-icon-wrapper {
+  outline: 2px solid var(--accent-color);
+}
+
+.modal-form-checkbox:checked + .modal-form-checkbox-policy .checkbox-icon {
+  opacity: 1;
+}
+
+.modal-form-checkbox:checked + .modal-form-checkbox-policy .checkbox-icon-wrapper {
+  border-color: transparent;
+}
+
+.modal-form-checkbox-policy {
+  margin-bottom: 30px;
+
+  vertical-align: middle;
+  font-size: 14px;
+  line-height: 1.71;
+  text-align: center;
+  color: var(--secondary-text-color);
+}
+
+.modal-form-policy-link {
+  color: var(--accent-color);
+}
+
+.modal-form-btn {
+  padding: 10px 56px;
+
+  align-self: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 1px solid transparent;
+  border-radius: 4px;
+  cursor: pointer;
+
+  transition: background-color var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-btn:hover,
+.modal-form-btn:focus {
+  background-color: #188ce8;
+}
+/* ============= END OF MODAL WINDOW ============= */ ;
