--- a/css/styles.css
+++ b/css/styles.css
@@ -603,6 +603,10 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.social-links-container {
+  margin-right: 93px;
+}
+
 .social-links-caption {
   margin-bottom: 20px;
 
@@ -611,6 +615,67 @@ body {
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--primary-white-color);
+}
+
+.subscription-form-head {
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
+}
+
+.subscription-form {
+  display: flex;
+}
+
+.subscription-form-field {
+  margin-right: 12px;
+}
+
+.subscription-form-input {
+  width: 358px;
+  height: 50px;
+  padding: 0 16px;
+
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+}
+
+.subscription-form-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscription-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 28px;
+
+  text-align: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 1px solid transparent;
+  border-radius: 4px;
+  background-color: var(--accent-color);
+}
+
+.subscription-icon {
+  margin-left: 10px;
+  fill: var(--primary-white-color);
 }
 /* ============= END OF FOOTER ============= */
 
@@ -794,7 +859,7 @@ body {
 }
 
 .modal-form-checkbox:focus + .modal-form-checkbox-policy .checkbox-icon-wrapper {
-  outline: 2px solid var(--accent-color);
+  outline: 2px solid var(--primary-black-color);
 }
 
 .modal-form-checkbox:checked + .modal-form-checkbox-policy .checkbox-icon {
